--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,12 @@
 		"target": "ESNext",
 		"types": ["vite/client", "node"],
 		"paths": {
-			"app/*": ["app/*"],
-			"entities/*": ["entities/*"],
-			"features/*": ["features/*"],
-			"pages/*": ["pages/*"],
-			"shared/*": ["shared/*"],
-			"widgets/*": ["widgets/*"]
+			"@/app/*": ["app/*"],
+			"@/entities/*": ["entities/*"],
+			"@/features/*": ["features/*"],
+			"@/pages/*": ["pages/*"],
+			"@/shared/*": ["shared/*"],
+			"@/widgets/*": ["widgets/*"]
 		},
 		"esModuleInterop": true
 	},
